carousel slide bug fixed

--- a/css/styles.css
+++ b/css/styles.css
@@ -47,6 +47,6 @@ body {
     background-color:rgb(21,88,55) ;
 }
 
-#carouselMenu {
+#carouselMenu1, #carouselMenu2 {
     background-color: rgb(68,157,124);
 }
