--- a/css/styles.css
+++ b/css/styles.css
@@ -19,6 +19,10 @@ body {
     height: 6em;
     z-index: 1;
 }
+
+#rightNav{
+    margin-right: 2em;
+}
 .dropMenu {
     background-color: white !important;
 }
