--- a/css/styles.css
+++ b/css/styles.css
@@ -115,16 +115,22 @@ body::-webkit-scrollbar {
 }
 
 .adress{
-    background-color: red;
-    height: 20em;
+
+    height: 8em;
     width: 20em;
+    margin-top: 1em;
+
+    text-align: center;
 }
 
 .map {
+    margin-top: -1em;
+    margin-left: -0.1em;
     height: 20em;
     width: 20em;
 }
 
 iframe {
-    margin-top: 5.5em
+    height: 16.5em;
+    width: 18em;
 }
