--- a/css/styles.css
+++ b/css/styles.css
@@ -34,6 +34,11 @@ body::-webkit-scrollbar {
 #rightNav{
     margin-right: 2em;
 }
+
+.disabled {
+    pointer-events: none;
+    cursor: default;
+  }
 /* .logoDiv {
     height: 8em;
 
