--- a/css/styles.css
+++ b/css/styles.css
@@ -5,7 +5,7 @@ body {
     width: 100vW;
     margin: 0;
     padding: 0;
-    background-image:url('img/paellaverduras.jpg');
+    background-image:url('/img/paellaverduras.jpg');
     min-height: 100%;
 
     /* Create the parallax scrolling effect */
